completed documnetation page

--- a/Technical Documentation page/practice.html
+++ b/Technical Documentation page/practice.html
@@ -15,5 +15,6 @@
       <li class="select" id="select">mehappy</li>
       <li class="select" id="select">mehappy</li>
     </ul>
+    <input type="checkbox" name="" id="" checked>
 </body>
 </html>
