--- a/Technical Documentation page/index.html
+++ b/Technical Documentation page/index.html
@@ -10,7 +10,6 @@
   <script src="https://kit.fontawesome.com/3c5dd8b0d1.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
   <div class="contain_nav">
     <nav id="navbar">
@@ -26,34 +25,34 @@
         <hr>
         <a href="#Java_history" class="nav-link">Java history</a>
         <hr>
-        <a href="#Java_OO_Programming_Concepts" class="nav-link">Java OOP Concepts</a>
+        <a href="#Java_OO_Programming_Concepts" class="nav-link">Java OO Programming Concepts</a>
         <hr>
-        <a href="#OBJECT-ORIENTED_PROGRAMMING_(OOP)" class="nav-link">Object oriented programming</a>
+        <a href="#OBJECT-ORIENTED_PROGRAMMING_(OOP)" class="nav-link">OBJECT-ORIENTED PROGRAMMING (OOP)</a>
         <hr>
-        <a href="#Java_is_platform_Independent" class="nav-link">Java is platform Independent</a>
+        <a href="#Java_is_platform_independent" class="nav-link">Java is platform independent</a>
         <hr>
         <a href="#Java_compilation" class="nav-link">Java compilation</a>
         <hr>
-        <a href="#Programming_style_&_Documentation" class="nav-link">Programming style</a>
+        <a href="#Programming_style_&_Documentation" class="nav-link">Programming style & Documentation</a>
         <hr>
-        <a href="#Programming_errors" class="nav-link">Programming Errors</a>
+        <a href="#Programming_errors" class="nav-link">Programming errors</a>
         <hr>
-        <a href="#Numeric_Data_Types_and_Operations" class="nav-link">Data Types and Operators</a>
+        <a href="#Numeric_Data_Types_and_Operators" class="nav-link">Numeric Data Types and Operators</a>
         <hr>
-        <a href="#Variables_&_identifiers" class="nav-link">Variables & Identifiers</a>
+        <a href="#Variables_&_identifiers" class="nav-link">Variables & identifiers</a>
         <hr>
-        <a href="#Your_First_Program_in_Java" class="nav-link">First program: Hello World</a>
+        <a href="#Your_First_Program_in_Java" class="nav-link">Your First Program in Java</a>
         <hr>
-        <a href="#Take_note" class="nav-link">Special characters</a>
+        <a href="#Take_note" class="nav-link">Take note</a>
         <hr>
         <a href="#Displaying_text_with_printf" class="nav-link">Displaying text with printf</a>
         <hr>
-        <a href="#Reading_input_from_the_console" class="nav-link">Reading inputs from the console</a>
+        <a href="#Reading_input_from_the_console" class="nav-link">Reading input from the console</a>
         <hr>
         <a href="#Memory_Concepts" class="nav-link">Memory Concepts</a>
         <hr>
         <a href="#Equality_and_Relational_Operators" id="nav-link">Equality and Relational Operators</a><hr>
-        <a href="#Assignment,increment_and_decrement_operators" id="nav-link">Assignment increment and decrement Operators</a>
+        <a href="#Assignment,_increment_and_decrement_operators" id="nav-link">Assignment, increment and decrement operators</a>
         <hr>
         <a href="#Loops_in_Java" class="nav-link">Loops in Java</a>
         <hr>
@@ -64,7 +63,7 @@
   </div>
   <main id="main-doc">
     <section class="main-section" id="Introduction">
-      <header id="Introduction">Introduction</header>
+      <header>Introduction</header>
       <div class="note">
         <p>Java (with a capital J) is a high-level, third generation programming language, like C, Fortran, Smalltalk,
           Perl, and many others. You can use Java to write computer applications that crunch numbers, process words,
@@ -79,7 +78,7 @@
       </div>
     </section>
     <section class="main-section" id="Java_history">
-      <header id="Java_history">Java history</header>
+      <header>Java history</header>
       <div class="note">
         <p>The Java language was designed at sun microsystem over 16 year period culminating in its first release in
           January 1996. The developers led by James Gosling, originally set out to build a language for controlling
@@ -95,7 +94,7 @@
       </div>
     </section>
     <section class="main-section" id="Java_OO_Programming_Concepts">
-      <header id="Java_OO_Programming_Concepts">Java OO Programming Concepts</header>
+      <header>Java OO Programming Concepts</header>
       <div class="note">
         <p>Object-Oriented programming (OOP) involves programming using objects. An object represents an entity in the
           real world that can be distinctly identified. For example a student, a desk, a circle, a button, and even a
@@ -113,19 +112,19 @@
         </ul>
       </div>
     </section>
-    <section class="main-section" id="OBJECT-ORIENTED-PROGRAMMING_(OOP)">
-      <header id="OBJECT-ORIENTED_PROGRAMMING_(OOP)">OBJECT-ORIENTED PROGRAMMING (OOP)</header>
+    <section class="main-section" id="OBJECT-ORIENTED_PROGRAMMING_(OOP)">
+      <header>OBJECT-ORIENTED PROGRAMMING (OOP)</header>
       <div class="note">
         <p>OOP represents an attempt to make programs more closely model the way people think about and deal with the
           world. In the older style of programming, a programmer who is faced with some problems must identify a
           computing task that need to be performed in order to solve the problem. Programming then consist of finding a
           sequence of instruction that will accomplish that tasks. But the heart of object-oriented programming, instead
           of task we fine object-entities that have behaviors, that holds information, and that can interact with
-          another. Programming consists of design set of objects that model the problem domain. This sis supposed to
+          another.</p><p>Programming consists of design set of objects that model the problem domain. This is supposed to
           make the design of the program more natural and hence easier to get right and easier to understand. An
           object-oriented programming language such as JAVA includes a number of features that make it very different
           from a standard language. In order to make effective use of these features, you have to “orient” your thinking
-          correctly. In object-oriented programs data is represented by objects, objects have two sections, fields
+          correctly.</p><p> In object-oriented programs data is represented by objects, objects have two sections, fields
           (instance) and methods. Fields tell you what an object is. Method tells you what an object does. These field
           and methods are closely tied to the objects real world characteristics and behavior. When a message it
           responds accordingly as defined by its methods.
@@ -162,9 +161,9 @@
           </ul>
         </div>
       </div>
-    </section>
-    <section class="main-section" id="Java_is_platform_Independent">
-      <header id="Java_is_platform_Independent">Java is platform Independent </header>
+  </section>
+  <section class="main-section" id="Java_is_platform_independent">
+      <header>Java is platform independent </header>
       <p>Java was designed to not only be cross-platform in source form like C, but also in compiled binary form. Since
         this is frankly impossible across processor architecture. Java is compiled to an intermediate form called
         byte-code. A java program never really execute natively on the host machine. Rather a special native program
@@ -175,44 +174,41 @@
       <p>The second important part of making Java cross-platform is the elimination of undefined or architecture
         dependent constructs. Integers are always four bytes long, and floating point variables follow the <span
           style="color: crimson;"> IEEE 754</span> standard for computer arithmetic exactly. You don't have to worry
-        that the meaning of an integer is going to change if you move from a Pentium to a PowerPC. In Java everything is
+        that the meaning of an integer is going to change if you move from a Pentium to a PowerPC.</p><p> In Java everything is
         guaranteed.
         However the virtual machine itself and some parts of the class library must be written in native code. These are
         not always as easy as or quick to port as pure Java programs.
-        Hence, Java is regarded as write once, run anywhere <b>(WORA)</b>.
+        Hence, Java is regarded as write once, run anywhere <b>(WORA)</b>.</p>
       </p>
     </section>
     <section class="main-section" id="Java_compilation">
-      <header id="Java_compilation">Java compilation</header>
+      <header>Java compilation</header>
       <div class="note">
         <p>There are two ways of creating, compiling and executing a java program after the jdk must have been installed
           on the computer system
         </p>
         <ol>
           <li>
-            <p><span class="header_take_note_of">Using any text editor like notepad, notepad++ etc.</span><br>
+            <span class="header_take_note_of">Using any text editor like notepad, notepad++ etc.</span><br>
               Using any text editor like notepad, notepad++ etc. to create and edit a Java source-code file and then
               compiling and executing the code from the command prompt. . The source file must end with the extension
               .java and must have the same exact name as the public class name. If there aren't any syntax errors, the
               compiler generates a bytecode file with a .class extension.
-            </p>
-            <p>
+              <br>
               <bold>NB:</bold> Before the java source code file can be compiled and executed from the command prompt,
               the classpath or the system path environment variable must be set
-            </p>
           </li>
           <li>
-            <p><span class="header_take_note_of"> Use a Java development tool (e.g., NetBeans, Eclipse, and TextPad)
+            <span class="header_take_note_of"> Use a Java development tool (e.g., NetBeans, Eclipse, and TextPad)
               </span><br> Editing, compiling, building, debugging, and online help are integrated in one graphical user
               interface. You simply enter source code in one window or open an existing file in a window, and then click
               a button or menu item or press a function key to compile and run the program.
-            </p>
           </li>
         </ol>
       </div>
     </section>
     <section class="main-section" id="Programming_style_&_Documentation">
-      <header id="Programming_style_&_Documentation">Programming style & Documentation</header>
+      <header>Programming style & Documentation</header>
       <article>
         <p>
           Good programming style and proper documentation make a program easy to read and help programmers prevent
@@ -223,20 +219,20 @@
           and documentation are as important as coding. Good programming style and appropriate documentation reduce the
           chance of errors and make programs easy to read.
         </p>
-        <p>
+        <!-- <p> -->
         <ol>
-          <li>Appropriate Comments and Comment Styles</li>
+          <li>Appropriate Comments and Comment Styles</li><br>
           <li>Proper Indentation and Spacing
-          </li>
+          </li><br>
           <li>Block Styles: A block is a group of statements surrounded by braces. There are two popular styles,
             next-line style and end-of-line style, as shown below.
           </li>
         </ol>
-        </p>
+        <!-- </p> -->
       </article>
     </section>
     <section class="main-section" id="Programming_errors">
-      <header id="Programming_errors">Programming errors</header>
+      <header>Programming errors</header>
       <article>
         <p><span class="header_take_note_of"> Syntax Errors</span><br>
           Errors that are detected by the compiler are called syntax errors or compile errors. Syntax
@@ -265,8 +261,8 @@
         </p>
       </article>
     </section>
-    <section class="main-section" id="Data_Types_and_Operators">
-      <header id="Numeric_Data_Types_and_Operations">Numeric Data Types and Operations</header>
+    <section class="main-section" id="Numeric_Data_Types_and_Operators">
+      <header>Numeric Data Types and Operators</header>
       <article>
         <p><i>Java has six numeric types for integers and floating-point numbers</i><br>
         </p>
@@ -388,7 +384,7 @@
       </article>
     </section>
     <section class="main-section" id="Variables_&_identifiers">
-      <header id="Variables_&_identifiers">Variables & identifiers</header>
+      <header>Variables & identifiers</header>
       <div class="note">
         <p>
           <span class="header_take_note_of">Identifiers</span><br>
@@ -471,7 +467,7 @@
       </div>
     </section>
     <section class="main-section" id="Your_First_Program_in_Java">
-      <header id="Your_First_Program_in_Java">Your First Program in Java </header>
+      <header>Your First Program in Java </header>
       <p>A Java application is a computer program that executes when you use the java command to launch the Java Virtual
         Machine (JVM). Later in this section we'll discuss how to compile and run a Java application. First we consider
         a simple application that displays a line of text. Figure 2.1 shows the program followed by a box that displays
@@ -494,7 +490,7 @@ public static void main(String[] args)
       <code class="console">Hello World!</code>
     </section>
     <section class="main-section" id="Take_note">
-      <header id="Take_note">Take note</header>
+      <header>Take note</header>
       <article>
         <p><span class="header_take_note_of"> LINE 1&2: Commenting Your Programs</span> <br>
           We insert <span style="color: rgb(255, 0, 128);">comments</span> to <span
@@ -584,9 +580,8 @@ public static void main(String[] args)
         </table>
       </summary>
     </section>
-    </section>
     <section class="main-section" id="Displaying_text_with_printf">
-      <header id="Displaying_Text_with_printf">Displaying Text with printf</header>
+      <header>Displaying text with printf</header>
       <article>
         <p>
           The System.out.printf method (f means “formatted”) displays formatted data. each line of code after each
@@ -648,7 +643,7 @@ public static void main(String[] args)
       </summary>
     </section>
     <section class="main-section" id="Reading_input_from_the_console">
-      <header id="Reading_input_from_the_console">Reading Input from the Console</header>
+      <header>Reading input from the console</header>
       <div class="text">
         <p>Reading input from the console enables the program to accept input from the user. In java can the Scanner
           class is used for console input. Java uses System.out to refer to the standard output device and System.in to
@@ -734,7 +729,7 @@ Sum is: 99
       </div>
     </section>
     <section class="main-section" id="Memory_Concepts">
-      <header id="Memory_Concepts">Memory Concepts</header>
+      <header>Memory Concepts</header>
       <article>
         <p>Variable names such as number1, number2 and sum actually correspond to locations in the
           computer's memory. Every variable has a name, a type, a size (in bytes) and a value.
@@ -752,7 +747,7 @@ Sum is: 99
       </article>
     </section>
     <section class="main-section" id="Equality_and_Relational_Operators">
-      <header id="Equality_and_Relational_Operators">Equality and Relational Operators</header>
+      <header>Equality and Relational Operators</header>
       <article>
         <p>
           <span class="header_take_note_of">Decision Making</span><br>
@@ -886,8 +881,8 @@ Sum is: 99
             </code>
       </article>
     </section>
-    <section class="main-section" id="Assignment,increment_and_decrement_operators">
-      <header id="Assignment,increment_and_decrement_operators">Assignment, increment and decrement operators</header>
+    <section class="main-section" id="Assignment,_increment_and_decrement_operators">
+      <header>Assignment, increment and decrement operators</header>
       <article>
         <p>
           <span class="header_take_note_of">Augmented assignment</span><br>
@@ -1020,7 +1015,7 @@ Sum is: 99
       </article>
     </section>
     <section class="main-section" id="Loops_in_Java">
-      <header id="Loops in Java">Loops in Java</header>
+      <header>Loops in Java</header>
       <article>
         <p>Looping in programming languages is a feature which facilitates the execution of a set of instructions/functions repeatedly while some condition evaluates to true. Java provides three ways for executing the loops. While all the ways provide similar basic functionality, they differ in their syntax and condition checking time.</p>
    <p>java provides Three types of Conditional statements this second  type is loop statement .</p>
@@ -1048,12 +1043,12 @@ while (condition);</code></li>
    <p>Read more on loops on <a style="color: green;text-decoration: underline;" href="https://www.geeksforgeeks.org/loops-in-java/"><b>geeks fo geeks.</b></a></p>
       </article>
     </section>
-    <h1>THANK YOU.</h1>
-    <section class="main-section" id="Reference"></section>
-      <footer> <header id="Reference">Reference</header>
+    <h1 style="margin-top: 10px;">THANK YOU.</h1>
+    <section class="main-section" id="Reference">
+      <header style="display: none;">Reference</header>
         <p>Reference from the NOTE INTENDED FOR A FIRST COURSE IN OBJECTIVE-Oriented programming language with java at <a style="color: green;" href="https://www.federalpolyilaro.edu.ng">federal polytechnic Ilaro</a>, Ogun state <br>Nigeria.</p>
-  </footer>
-  </main>
+</section> 
+ </main>
           <script>
          const mai =  document.getElementById('main-doc');
         const navg = document.querySelector('.chevrun_up');
@@ -1068,7 +1063,7 @@ while (condition);</code></li>
         }
           window.onscroll = ()=>{
           navg.parentElement.parentElement.style.position = 'fixed';
-          mai.style.marginTop += '55px';
+          mai.classList.add("fixed");
       }
         console.log(show_up);
       </script>
